[package]
name = "rust-lsm"
version = "0.1.0"
authors = ["Dillon George <dillon.thorsteinn@gmail.com>"]

[dependencies]
byteorder = "1.2.6"
enum-primitive-derive = "^0.1"
futures = "0.1.24"
num-traits = "^0.1"
tokio = "0.1.8"
tokio-fs = "0.1.3"
tokio-io = "0.1.8"
tokio-threadpool = "0.1.6"

[dev-dependencies]
tempfile = "3.0"

