[package]
name = "rust-lsm"
version = "0.1.0"
authors = ["Dillon George <dillon.thorsteinn@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.2.6"
enum-primitive-derive = "^0.1"
futures = "0.1.24"
num-traits = "^0.1"
tokio = "^0.1"
tokio-fs = "^0.1"
tokio-io = "^0.1"
tokio-threadpool = "^0.1"
tracing = "^0.1"
tracing-subscriber = "^0.1"

[dev-dependencies]
tempfile = "^3.1"

